--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
-    <div class="row">
+    
+    <div class="col-md-8 article-p">
+     <p><b>Researchers at Improble Beef, a company that specializes in meat alternatives, 
+       have discovered that certain bacteria types are suitable for the production of 
+       tasty meat alternatives. These bacteria thrive in peoples navals. This dashboard 
+       was created to display the most common bacterial species, by count, in the navel 
+       of each volunteer test subject. If Improbable Beef is looking for people who 
+       carry a large number of a certain bacterial species, the volunteers should be 
+       able to quickly use the dashboard to figure out whether they are eligible to sell 
+       their bacteria to the company.</b></p> 
+     <div class="row">
       <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
