--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="col-md-12 article-p">
      <p><b>Researchers at Improble Beef, a company that specializes in meat alternatives, 
        have discovered that certain bacteria types are suitable for the production of 
-       tasty meat alternatives. These bacteria thrive in peoples navals. This dashboard 
+       tasty meat alternatives. These bacteria thrive in peoples navels. This dashboard 
        was created to display the most common bacterial species, by count, in the navel 
        of each volunteer test subject. If Improbable Beef is looking for people who 
        carry a large number of a certain bacterial species, the volunteers should be 
