--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     
     <div class="col-md-12 article-p">
-     <p><b>Researchers at Improble Beef, a company that specializes in meat alternatives, 
+     <p><b>Researchers at Improbable Beef, a company that specializes in meat alternatives, 
        have discovered that certain bacteria types are suitable for the production of 
        tasty meat alternatives. These bacteria thrive in peoples navels. This dashboard 
        was created to display the most common bacterial species, by count, in the navel 
